доработка адаптации под мобильные устройства файл media.less

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
     <dir id="toTop" class="hidden-xs">наверх</dir> <!-- Кнопка НАВЕРХ -->
   <body>
-  <!--Шапка главной страницы-->
+    <!--Шапка главной страницы-->
     <header id="hed" class="hidden-xs" >
       <div class="container">
         <div class="row">
@@ -113,21 +113,21 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-sm-4">
             <div class="main_bottom wow fadeInUp" data-wow-delay="0.4s">
               <div class="connect_bot bot1 text-left">
                 <a href="#station">Выбрать станцию</a>
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-sm-4">
             <div class="main_bottom wow fadeInUp" data-wow-delay="0.6s">
               <div class="connect_bot bot2 text-center">
                 <a href="#wireless_network">Выбрать Wi-Fi решение</a>
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-sm-4">
             <div class="main_bottom wow fadeInUp" data-wow-delay="0.8s">
               <div class="connect_bot bot3">
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-sm">заказать вызов специалиста</button>
@@ -146,7 +146,7 @@
           </div>
         </div>
         <div class="row text-center">
-          <div class="col-md-3">
+          <div class="col-sm-3">
             <div class="card">
               <img src="img/type_1.png" alt="Малее АТС" class="img-responsive center-block">
               <h4>Для малого бизнеса</h4>
@@ -155,7 +155,7 @@
               <button class="order_btn" data-toggle="modal" data-target=".bs-example-modal-sm">заказать</button>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-sm-3">
             <div class="card">
               <img src="img/type_2.png" alt="Средние АТС" class="img-responsive center-block">
               <h4>Для среднего бизнеса</h4>
@@ -164,7 +164,7 @@
               <button class="order_btn" data-toggle="modal" data-target=".bs-example-modal-sm">заказать</button>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-sm-3">
             <div class="card">
               <img src="img/type_3.png" alt="Комплексы" class="img-responsive center-block">
               <h4>Для крупного бизнеса</h4>
@@ -173,7 +173,7 @@
               <button class="order_btn" data-toggle="modal" data-target=".bs-example-modal-sm">заказать</button>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-sm-3">
             <div class="card">
               <img src="img/type_4.png" alt="Телефны" class="img-responsive center-block">
               <h4>Телефонные аппараты</h4>
@@ -194,7 +194,7 @@
           </div>
         </div>
         <div class="row text-center">
-          <div class="col-md-3">
+          <div class="col-sm-3">
             <div class="card">
               <img src="img/type_5.png" alt="Малее АТС" class="img-responsive center-block">
               <h4>Точки доступа</h4>
@@ -203,25 +203,25 @@
               <button class="order_btn" data-toggle="modal" data-target=".bs-example-modal-sm">заказать</button>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-sm-3">
             <div class="card">
               <img src="img/type_6.png" alt="Средние АТС" class="img-responsive center-block">
-              <h4>Активное оборудование</h4>
+              <h4>PoE оборудование</h4>
               <br>
               <button class="more_btn" data-toggle="modal" data-target=".active_equipment">подробнее</button>
               <button class="order_btn" data-toggle="modal" data-target=".bs-example-modal-sm">заказать</button>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-sm-3">
             <div class="card">
               <img src="img/type_7.png" alt="Комплексы" class="img-responsive center-block">
-              <h4>Компактные контроллеры</h4>
+              <h4>контроллеры</h4>
               <br>
               <button class="more_btn" data-toggle="modal" data-target=".controllers">подробнее</button>
               <button class="order_btn" data-toggle="modal" data-target=".bs-example-modal-sm">заказать</button>
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-sm-3">
             <div class="card">
               <img src="img/type_8.png" alt="Телефны" class="img-responsive center-block">
               <h4>Направленные антены</h4>
@@ -263,18 +263,18 @@
                 <!-- Слайды создаются с помощью контейнера с классом item, внутри которого помещается содержимое слайда -->
                 <div class="active item">
                   <div class="row">
-                    <div class="col-md-5">
+                    <div class="col-sm-5">
                       <div class="item_block block_name"><h3>XL</h3></div>
                     </div>
-                    <div class="col-md-7">
+                    <div class="col-sm-7">
                       <div class="item_block block_address"><p>Ямашева 97</p></div> 
                     </div>
                   </div>
                   <div class="row">
-                    <div class="col-md-5">
+                    <div class="col-sm-5">
                       <img src="img/object/1.jpg" class="img-responsive" alt="XL">
                     </div>
-                    <div class="col-md-7">
+                    <div class="col-sm-7">
                       <div class="map_object" style="max-width: 660px; max-height: 380px">
                        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=ldfpShS3lVZMd40tQ2PN-upnNzbq1hP9&amp;width=100%&amp;height=100%&amp;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true"></script>
                       </div>
@@ -284,18 +284,18 @@
                 <!-- Слайд №2 -->
                 <div class="item">
                   <div class="row">
-                    <div class="col-md-5">
+                    <div class="col-sm-5">
                       <div class="item_block block_name"><h3>Suvar Plaza</h3></div>
                     </div>
-                    <div class="col-md-7">
+                    <div class="col-sm-7">
                       <div class="item_block block_address"><p>Спартаковская 6</p></div> 
                     </div>
                   </div>
                   <div class="row">
-                    <div class="col-md-5">
+                    <div class="col-sm-5">
                       <img src="img/object/2.jpg" class="img-responsive" alt="Suvar Plaza">
                     </div>
-                    <div class="col-md-7">  
+                    <div class="col-sm-7">  
                       <div class="map_object" style="max-width: 600px; max-height: 380px">
                         <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=0-QC4XCwU8pxo8d0BTqfbXBLwU2M15i0&amp;width=100%&amp;height=100%&amp;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true"></script>
                       </div>
@@ -305,18 +305,18 @@
                 <!-- Слайд №3 -->
                 <div class="item">
                   <div class="row">
-                    <div class="col-md-5">
+                    <div class="col-sm-5">
                       <div class="item_block block_name"><h3>Сити Центр</h3></div>
                     </div>
-                    <div class="col-md-7">
+                    <div class="col-sm-7">
                       <div class="item_block block_address"><p>Академика Парина 3</p></div> 
                     </div>
                   </div>
                   <div class="row">
-                    <div class="col-md-5">
+                    <div class="col-sm-5">
                       <img src="img/object/3.jpg" class="img-responsive" alt="City Centr">
                     </div>
-                    <div class="col-md-7"> 
+                    <div class="col-sm-7"> 
                       <div class="map_object" style="max-width: 600px; max-height: 380px">
                         <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=sgtABBH8TsxIFPYHhOQUT5I90Xd_jccG&amp;width=100%&amp;height=100%&amp;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true"></script>
                       </div>
@@ -326,18 +326,18 @@
                 <!-- Слайд №4 -->
                 <div class="item">
                   <div class="row">
-                    <div class="col-md-5">
+                    <div class="col-sm-5">
                       <div class="item_block block_name"><h3>Колходный рынок</h3></div>
                     </div>
-                    <div class="col-md-7">
+                    <div class="col-sm-7">
                       <div class="item_block block_address"><p>Мартына Межлаука 13</p></div> 
                     </div>
                   </div>
                   <div class="row">
-                    <div class="col-md-5">
+                    <div class="col-sm-5">
                       <img src="img/object/4.jpg" class="img-responsive" alt="Колхозный рынок">
                     </div>
-                    <div class="col-md-7">
+                    <div class="col-sm-7">
                       <div class="map_object" style="max-width: 600px; max-height: 380px">
                         <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=Byjn5UVjOnLwzKCCZFrip0stGz90fB6c&amp;width=100%&amp;height=100%&amp;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true"></script>
                       </div>
@@ -347,18 +347,18 @@
                 <!-- Слайд №5 -->
                 <div class="item">
                   <div class="row">
-                    <div class="col-md-5">
+                    <div class="col-sm-5">
                       <div class="item_block block_name"><h3>Отель Ривьера</h3></div>
                     </div>
-                    <div class="col-md-7">
+                    <div class="col-sm-7">
                       <div class="item_block block_address"><p>Проспект Фатыха Амирхана 1А</p></div> 
                     </div>
                   </div>
                   <div class="row">
-                    <div class="col-md-5">
+                    <div class="col-sm-5">
                       <img src="img/object/5.jpg" class="img-responsive" alt="Отель Ривьера">
                     </div>
-                    <div class="col-md-7">
+                    <div class="col-sm-7">
                       <div class="map_object" style="max-width: 600px; max-height: 380px">
                         <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=gyswwaFwr2fryoWX7fO063N-lxHDPFtr&amp;width=100%&amp;height=100%&amp;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true"></script>
                       </div>
@@ -368,18 +368,18 @@
                 <!-- Слайд №6 -->
                 <div class="item">
                   <div class="row">
-                    <div class="col-md-5">
+                    <div class="col-sm-5">
                       <div class="item_block block_name"><h3>РК Ривьера</h3></div>
                     </div>
-                    <div class="col-md-7">
+                    <div class="col-sm-7">
                       <div class="item_block block_address"><p>Проспект Фатыха Амирхана 1Б</p></div> 
                     </div>
                   </div>
                   <div class="row">
-                    <div class="col-md-5">
+                    <div class="col-sm-5">
                       <img src="img/object/6.jpg" class="img-responsive" alt="РК Ривьера">
                     </div>
-                    <div class="col-md-7">
+                    <div class="col-sm-7">
                       <div class="map_object" style="max-width: 600px; max-height: 380px">
                         <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=X6F0V6IpTBQFM3mddhFdKrR-vpk8k9v7&amp;width=100%&amp;height=100%&amp;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true"></script>
                       </div>
@@ -389,18 +389,18 @@
                 <!-- Слайд №7 -->
                 <div class="item">
                   <div class="row">
-                    <div class="col-md-5">
+                    <div class="col-sm-5">
                       <div class="item_block block_name"><h3>Интертерминал</h3></div>
                     </div>
-                    <div class="col-md-7">
+                    <div class="col-sm-7">
                       <div class="item_block block_address"><p>Набережная 1</p></div> 
                     </div>
                   </div>
                   <div class="row">
-                    <div class="col-md-5">
+                    <div class="col-sm-5">
                       <img src="img/object/7.jpg" class="img-responsive" alt="Интертерминал">
                     </div>
-                    <div class="col-md-7">
+                    <div class="col-sm-7">
                       <div class="map_object" style="max-width: 600px; max-height: 380px">
                         <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=JGJ_6ALxmnb5rh3EvXUI--R65qdPhhDT&amp;width=100%&amp;height=100%&amp;lang=ru_RU&amp;sourceType=constructor&amp;scroll=true"></script>
                       </div>
@@ -461,7 +461,7 @@
       </div>
     </footer>
 
-    <!-- Модальное окно Вызов специалиста -->
+        <!-- Модальное окно Вызов специалиста -->
         <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
           <div class="modal-dialog modal-sm" role="document">
             <div class="modal-content">
@@ -492,8 +492,8 @@
             </div>
           </div>
         </div>
-    <!-- Модальные окна для АТС  -->    
-    <!-- Модальное окно Станция для малого бизнеса  -->
+        <!-- Модальные окна для АТС  -->    
+        <!-- Модальное окно Станция для малого бизнеса  -->
         <div class="modal fade ats_for_small_bisnes" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
           <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
@@ -532,7 +532,7 @@
             </div>
           </div>
         </div>
-    <!-- Модальное окно Станция для среднего бизнеса  -->
+        <!-- Модальное окно Станция для среднего бизнеса  -->
         <div class="modal fade ats_for_average_bisnes" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
           <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
@@ -571,7 +571,7 @@
             </div>
           </div>
         </div>
-    <!-- Модальное окно Станция для крупного бизнеса  -->
+        <!-- Модальное окно Станция для крупного бизнеса  -->
         <div class="modal fade ats_for_high_bisnes" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
           <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
@@ -610,7 +610,7 @@
             </div>
           </div>
         </div>
-    <!-- Модальное окно телефонные аппараты для бизнеса  -->
+        <!-- Модальное окно телефонные аппараты для бизнеса  -->
         <div class="modal fade phones" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
           <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
@@ -649,8 +649,8 @@
             </div>
           </div>
         </div>
-    <!-- Модальные окна для Wi-Fi  -->    
-    <!-- Модальное окно точки доступа  -->
+        <!-- Модальные окна для Wi-Fi  -->    
+        <!-- Модальное окно точки доступа  -->
         <div class="modal fade wifi_dot" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
           <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
@@ -689,7 +689,7 @@
             </div>
           </div>
         </div> 
-    <!-- Модальное окно Активное оборудование  -->
+        <!-- Модальное окно Активное оборудование  -->
         <div class="modal fade active_equipment" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
           <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
@@ -728,7 +728,7 @@
             </div>
           </div>
         </div>
-    <!-- Модальное окно Контроллеры  -->
+        <!-- Модальное окно Контроллеры  -->
         <div class="modal fade controllers" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
           <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
@@ -767,7 +767,7 @@
             </div>
           </div>
         </div> 
-    <!-- Модальное окно Антены  -->
+        <!-- Модальное окно Антены  -->
         <div class="modal fade antenna" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
               <div class="modal-dialog modal-lg" role="document">
                 <div class="modal-content">
